--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
-html, body {
+html,
+body {
       background-color: #f6f6f6;
       margin: 0;
       padding: 0;
+      height: 100%;
+      /*Thêm dòng này */
+
+
+      position: relative;
+      overflow: hidden;
+      /* Đảm bảo tuyết không bị cắt ngoài màn hình */
 }
 
-img {max-width: 100%;}
+/*--------------------------------Christmast effect snow-----------------------*/
+
+/*---------------------------------------------------------------------------------*/
+img {
+      max-width: 100%;
+}
 
 body {
       display: grid;
@@ -12,7 +25,7 @@ body {
       grid-template-columns: repeat(12, 1fr);
       grid-auto-rows: minmax(auto, auto);
       color: #3e3e3e;
-      text-shadow: 0.4px 0.4px 0.4px rgba(0,0,0,.2);
+      text-shadow: 0.4px 0.4px 0.4px rgba(0, 0, 0, .2);
 }
 
 h1 {
@@ -31,7 +44,8 @@ h1 {
       margin-top: 3.6rem;
 }
 
-#clock-box, #info {
+#clock-box,
+#info {
       grid-column: span 3;
       display: grid;
       grid-template-columns: repeat(12, 1fr);
@@ -47,7 +61,8 @@ h1 {
       border-radius: 10rem;
 }
 
-date, time {
+date,
+time {
       display: block;
 }
 
@@ -65,7 +80,7 @@ time {
       width: 160px;
       height: 160px;
       border-radius: 50%;
-      box-shadow: 2px 2px 8px rgba(0,0,0,.2);
+      box-shadow: 2px 2px 8px rgba(0, 0, 0, .2);
 }
 
 #info {
@@ -137,8 +152,10 @@ footer {
             height: 120px;
       }
 
-      #info .one, #info .two{
-            grid-column: span 12;;
+      #info .one,
+      #info .two {
+            grid-column: span 12;
+            ;
       }
 
       #heart {
