test scroll down

--- a/style.css
+++ b/style.css
@@ -4,10 +4,8 @@ body {
       margin: 0;
       padding: 0;
       height: 100%;
-      /*Thêm dòng này */
+      overflow-y: auto;
       position: relative;
-      overflow: hidden;
-      /* Đảm bảo tuyết không bị cắt ngoài màn hình */
 }
 
 /*--------------------------------Christmast effect snow-----------------------*/
@@ -361,324 +359,6 @@ body {
       }
 }
 
-
-
-.snow-peak-1a {
-      /*sharp snow edge*/
-      position: absolute;
-      content: "";
-      bottom: -130px;
-      left: -45px;
-      border-top: 30px solid #c1cfd7;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-1b {
-      position: absolute;
-      content: "";
-      bottom: -130px;
-      left: -7px;
-      border-top: 30px solid #c1cfd7;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.mt2 {
-      position: absolute;
-      content: "";
-      left: -20px;
-      bottom: 0;
-      border-top: 0px solid transparent;
-      border-right: 150px solid transparent;
-      border-left: 150px solid transparent;
-      border-bottom: 200px solid #094669;
-      z-index: 6;
-}
-
-.snow2 {
-      position: absolute;
-      content: "";
-      left: -75px;
-      bottom: -98px;
-      border-top: 0px solid transparent;
-      border-right: 75px solid transparent;
-      border-left: 75px solid transparent;
-      border-bottom: 100px solid #e4e8eb;
-}
-
-.snow-peak-2a {
-      position: absolute;
-      content: "";
-      bottom: -110px;
-      left: -60px;
-      border-top: 20px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-2b {
-      position: absolute;
-      content: "";
-      bottom: -120px;
-      left: -25px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-2c {
-      position: absolute;
-      content: "";
-      bottom: -110px;
-      right: -60px;
-      border-top: 20px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.mt3 {
-      position: absolute;
-      content: "";
-      left: 280px;
-      bottom: 0;
-      border-top: 0px solid transparent;
-      border-right: 150px solid transparent;
-      border-left: 150px solid transparent;
-      border-bottom: 175px solid #094669;
-      z-index: 6;
-}
-
-.snow3 {
-      position: absolute;
-      content: "";
-      left: -70px;
-      bottom: -80px;
-      border-top: 0px solid transparent;
-      border-right: 70px solid transparent;
-      border-left: 70px solid transparent;
-      border-bottom: 90px solid #e4e8eb;
-}
-
-.snow-peak-3a {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      left: -60px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-3b {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      left: -20px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-3c {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      right: -20px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-3d {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      right: -60px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.mt4 {
-      position: absolute;
-      content: "";
-      left: 800px;
-      bottom: 0;
-      border-top: 0px solid transparent;
-      border-right: 150px solid transparent;
-      border-left: 150px solid transparent;
-      border-bottom: 250px solid #0b364f;
-      z-index: 3;
-}
-
-.snow4 {
-      position: absolute;
-      content: "";
-      left: -47px;
-      bottom: -75px;
-      border-top: 0px solid transparent;
-      border-right: 47px solid transparent;
-      border-left: 47px solid transparent;
-      border-bottom: 80px solid #c1cfd7;
-}
-
-.snow-peak-4a {
-      /*sharp snow edge*/
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      left: -45px;
-      border-top: 30px solid #c1cfd7;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-/* the sharp snow edge an is INVERTED triangle, so we want to see the the top border,not bottom. Top border should have a color. Other borders should be transparent*/
-
-.snow-peak-4b {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      left: -7px;
-      border-top: 30px solid #c1cfd7;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.mt5 {
-      position: absolute;
-      content: "";
-      left: 500px;
-      bottom: 0;
-      border-top: 0px solid transparent;
-      border-right: 200px solid transparent;
-      border-left: 200px solid transparent;
-      border-bottom: 150px solid #094669;
-      z-index: 6;
-}
-
-.snow5 {
-      position: absolute;
-      content: "";
-      left: -100px;
-      bottom: -75px;
-      border-top: 0px solid transparent;
-      border-right: 100px solid transparent;
-      border-left: 100px solid transparent;
-      border-bottom: 75px solid #e4e8eb;
-}
-
-.snow-peak-5a {
-      position: absolute;
-      content: "";
-      bottom: -95px;
-      left: -60px;
-      border-top: 20px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-5b {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      left: -25px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-5c {
-      position: absolute;
-      content: "";
-      bottom: -95px;
-      right: -60px;
-      border-top: 20px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.mt6 {
-      position: absolute;
-      content: "";
-      left: 950px;
-      bottom: 0;
-      border-top: 0px solid transparent;
-      border-right: 150px solid transparent;
-      border-left: 150px solid transparent;
-      border-bottom: 175px solid #094669;
-      z-index: 6;
-}
-
-.snow6 {
-      position: absolute;
-      content: "";
-      left: -70px;
-      bottom: -80px;
-      border-top: 0px solid transparent;
-      border-right: 70px solid transparent;
-      border-left: 70px solid transparent;
-      border-bottom: 90px solid #e4e8eb;
-}
-
-.snow-peak-6a {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      left: -60px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-6b {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      left: -20px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-6c {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      right: -20px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
-
-.snow-peak-6d {
-      position: absolute;
-      content: "";
-      bottom: -100px;
-      right: -60px;
-      border-top: 30px solid #e4e8eb;
-      border-right: 25px solid transparent;
-      border-bottom: 0px solid transparent;
-      border-left: 25px solid transparent;
-}
 
 /*---------------------------------------------------------------------------------*/
 img {
