--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
       height: 100%;
       overflow-y: auto;
       position: relative;
+      overflow: hidden;
 }
 
 /*--------------------------------Christmast effect snow-----------------------*/
