--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ body {
       margin: 0;
       padding: 0;
       height: 100%;
-      overflow-y: scroll;
-      overflow-x: hidden;
+      /* overflow-y: scroll; */
+      /* overflow-x: hidden; */
       position: relative;
-      /* overflow: hidden; */
+      overflow: hidden;
 }
 
 /*--------------------------------Christmast effect snow-----------------------*/
